Updated header bg

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>FNF-Aparel | Fashion house</title>
+    <title>ABC </title>
     <link rel="shortcut icon" href="img/small-logo-5.jpg">
     <!-- loading fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto:400,700" rel="stylesheet"> 
@@ -23,7 +23,7 @@
 
 <body>
     <!-- Navigation ( sticky-top ) -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-info shadow-lg">
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom border-info shadow-lg mb-3">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
                     aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -96,8 +96,8 @@
     </div>
     <div class="marquee-area">
         <div class="container">
-            <div class="bg-info overflow text-white py-3">
-                <h3 class="marquee">Apparel Marketing * Factory Sourcing * Merchandising * Business communication</h3>
+            <div class="bg-info overflow text-white py-3 rounded shadow-lg">
+                <h3 class="marquee">Apparel Marketing <span class="text-warning">*</span> Factory Sourcing <span class="text-warning">*</span> Merchandising <span class="text-warning">*</span> Business communication</h3>
             </div>
         </div>
     </div>
