--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <!-- Navigation ( sticky-top ) -->
-    <nav class="navbar navbar-expand-lg navbar-light border-bottom border-info shadow-lg mb-3">
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom border-info shadow-lg mb-3 sticky-top bg-white">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
                     aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
