--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ABC </title>
+    <title>ABC | Apparel & Business Association/Club</title>
     <link rel="shortcut icon" href="img/small-logo-5.jpg">
     <!-- loading fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto:400,700" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto:400,700" rel="stylesheet">
     <!-- adding style files -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
@@ -24,138 +24,187 @@
 <body>
     <!-- Navigation ( sticky-top ) -->
     <nav class="navbar navbar-expand-lg navbar-light border-bottom border-info shadow-lg mb-3 sticky-top bg-white">
-            <div class="container">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
-                    aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <a class="navbar-brand" href="#">
-                    <img src="img/small-logo-5.jpg" alt="Brand">
-                </a>
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#">
+                <img src="img/small-logo-5.jpg" alt="Brand">
+            </a>
 
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Disabled</a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Disabled</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
     <header class="header">
         <div class="header-slider wow fadeIn">
-            <div class="container">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="img/abc-slider-01.jpg" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="img/abc-slider-02.jpg" alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="img/abc-slider-03.jpg" alt="Third slide">
+            <div class="container-fluid p-0 m-0">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-8">
+                        <div id="carouselExampleIndicators" class="carousel slide px-2 mx-2 bg-white" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" src="img/abc-slider-01.jpg" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="img/abc-slider-02.jpg" alt="Second slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="img/abc-slider-03.jpg" alt="Third slide">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
                 </div>
             </div>
 
         </div>
     </header>
     <div class="slogan-area">
-        <div class="container">
-            <div class="slogan-content">
-                <p class="text-justify text-muted">
-                   <i>(Apparel & Business Association/Club). ABC help you to group your business & skills; here you can
-                    meet and share your idea with a large no of factory owners, directors, professional merchandisers ,
-                    GM , Marketing & Merchandising professional, Textiles Professional & Engineer, Leather professional
-                    & engineer, GM, Quality Expert, Dyeing Expert, Trims & Accessories merchandisers & Marketing
-                    executive over all total information and order collection</i>
-                </p>
-            </div>
+        <div class="container-fluid p-0 m-0">
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-8">
+                    <div class="slogan-content px-2 mx-2 bg-white">
+                        <p class="text-justify text-muted">
+                            <i>(Apparel & Business Association/Club). ABC help you to group your business & skills;
+                                here you can
+                                meet and share your idea with a large no of factory owners, directors, professional
+                                merchandisers ,
+                                GM , Marketing & Merchandising professional, Textiles Professional & Engineer, Leather
+                                professional
+                                & engineer, GM, Quality Expert, Dyeing Expert, Trims & Accessories merchandisers &
+                                Marketing
+                                executive over all total information and order collection</i>
+                        </p>
+                    </div>
+                </div>
+            </div>>
         </div>
     </div>
     <div class="marquee-area">
-        <div class="container">
-            <div class="bg-info overflow text-white py-3 rounded shadow-lg">
-                <h3 class="marquee">Apparel Marketing <span class="text-warning">*</span> Factory Sourcing <span class="text-warning">*</span> Merchandising <span class="text-warning">*</span> Business communication</h3>
+        <div class="container-fluid p-0 m-0">
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-8">
+                    <div class="bg-info overflow text-white py-3 rounded shadow-lg px-2 mx-2">
+                        <h3 class="marquee">Apparel Marketing <span class="text-warning">*</span> Factory Sourcing
+                            <span class="text-warning">*</span> Merchandising <span class="text-warning">*</span>
+                            Business communication</h3>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <div class="company-details">
-        <div class="container my-5 oneByOne">
-            <div class="row">
-                <div class="col-md-5 border-right">
-                    <div class="wow fadeInRight animated">
-                        <h2>About us</h2>
-                        <p class="text-justify">We would like to introduce ABC4U as an Apparel & Business Club/Association.
-                            It’s promoted by professional & dynamic members who are leading different department on apparel
-                            sectors like garments, textiles, dyeing, leather, trims & accessories, research & development,
-                            merchandising & marketing along with international sourcing, buyer sourcing & communication.
-                            You can build up your skill with us.</p>
-                    </div>
-                    <div class="wow fadeInRight animated delay-1s">
-                        <h2>Our Mission</h2>
-                        <p class="text-justify">Statement to build a large team on apparel manufacturers & professional
-                            where we can share our experience and premier international standard quality garments as well
-                            buyer satisfaction</p>
-                    </div>
+        <div class="container-fluid px-0 py-4 m-0 oneByOne">
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-8">
+                    <div class="company-details-content  py-5 px-3 mx-2 bg-white">
 
-                </div>
-                <div class="col-md-7 wow fadeIn delay-1s">
-                    <div class="text">
                         <div class="row">
-                            <div class="text-content d-flex align-items-center m-3 bg-custom">
-                                    <div class="col-md-8">
-                                        <span class="small">Reg only for the bellow
-                                        apparel related industry/factory, Buying House/Office, Professional, Business Man & New
-                                        Entrepreneur</span>
+                            <div class="col-md-5 border-right">
+                                <div class="wow fadeInRight animated">
+                                    <h2>About us</h2>
+                                    <p class="text-justify">We would like to introduce ABC4U as an Apparel & Business
+                                        Club/Association.
+                                        It’s promoted by professional & dynamic members who are leading different
+                                        department on apparel
+                                        sectors like garments, textiles, dyeing, leather, trims & accessories, research
+                                        & development,
+                                        merchandising & marketing along with international sourcing, buyer sourcing &
+                                        communication.
+                                        You can build up your skill with us.</p>
+                                </div>
+                                <div class="wow fadeInRight animated delay-1s">
+                                    <h2>Our Mission</h2>
+                                    <p class="text-justify">Statement to build a large team on apparel manufacturers &
+                                        professional
+                                        where we can share our experience and premier international standard quality
+                                        garments as well
+                                        buyer satisfaction</p>
+                                </div>
+
+                            </div>
+                            <div class="col-md-6 wow fadeIn delay-1s">
+                                <div class="text">
+                                    <div class="p-2">
+                                        <div class="text-content d-flex justify-content-between align-items-center bg-custom">
+                                            <div class="">
+                                                <span class="small">Reg only for the bellow
+                                                    apparel related industry/factory, Buying House/Office,
+                                                    Professional, Business Man & New
+                                                    Entrepreneur</span>
+                                            </div>
+                                            <div class="text-center text-sm-right">
+                                                <div class="btn btn-outline-danger btn-sm">Registration Now</div>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="col-md-4 text-center text-sm-right">
-                                        <div class="btn btn-outline-danger">Registration Now</div>
+                                </div>
+                                <div id="smallCarousel" class="carousel slide" data-ride="carousel">
+
+                                    <ol class="carousel-indicators">
+                                        <li data-target="#smallCarousel" data-slide-to="0" class="active"></li>
+                                        <li data-target="#smallCarousel" data-slide-to="1"></li>
+                                        <li data-target="#smallCarousel" data-slide-to="2"></li>
+                                    </ol>
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img class="d-block w-100" src="img/abc-in-01.jpg" alt="First slide">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="d-block w-100" src="img/abc-in-02.jpg" alt="Second slide">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="d-block w-100" src="img/abc-in-03.jpg" alt="Third slide">
+                                        </div>
                                     </div>
+                                </div>
                             </div>
                         </div>
-
                     </div>
-                    <div id="smallCarousel" class="carousel slide" data-ride="carousel">
-
-                        <ol class="carousel-indicators">
-                            <li data-target="#smallCarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#smallCarousel" data-slide-to="1"></li>
-                            <li data-target="#smallCarousel" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="img/abc-in-01.jpg" alt="First slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/abc-in-02.jpg" alt="Second slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/abc-in-03.jpg" alt="Third slide">
-                            </div>
-                        </div>
-                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="sidebar-link">
+        <div class="container-fluid">
+            <div class="row d-flex justify-content-between">
+                <div class="col-md-2 fixed fixed-left my-5 mr-md-3 mr-0 py-3 bg-white border-top border-4 border-success">
+                        <h5>Updates: </h5>
+                        <p> <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae aut sapiente nobis voluptates eos tempora quas hic laboriosam exercitationem quo. Esse expedita labore libero ducimus magni, in alias quod pariatur!</small></p>
+                        <a href="#" class="btn btn-outline-secondary btn-sm float-right">Read More</a><br>
+                        <img src="img/abc-in-01.jpg" alt="">
+                </div>
+                <div class="col-md-2 fixed fixed-right my-5 ml-md-3 ml-0 py-3 bg-white border-top border-4 border-success">
+                    <h5>News & Views: </h5>
+                    <p> <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt magnam excepturi velit explicabo, ad voluptatibus commodi ipsum! Cum quibusdam ab explicabo totam laudantium, aut, velit veniam rerum sunt, iste assumenda?</small></p>
+                    <a href="#" class="btn btn-outline-secondary btn-sm float-right">Read More</a><br>
+                    <img src="img/abc-in-01.jpg" alt="">
                 </div>
             </div>
         </div>
