--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
                 <div class="col-md-8">
                     <div class="slogan-content px-2 mx-2 bg-white">
                         <p class="text-justify text-muted">
-                            <i>(Apparel & Business Association/Club). ABC help you to group your business & skills;
-                                here you can
-                                meet and share your idea with a large no of factory owners, directors, professional
-                                merchandisers ,
-                                GM , Marketing & Merchandising professional, Textiles Professional & Engineer, Leather
-                                professional
-                                & engineer, GM, Quality Expert, Dyeing Expert, Trims & Accessories merchandisers &
-                                Marketing
-                                executive over all total information and order collection</i>
+                        <i>(Apparel & Business Association/Club). ABC help you to group your business & skills;
+                            here you can
+                            meet and share your idea with a large no of factory owners, directors, professional
+                            merchandisers ,
+                            GM , Marketing & Merchandising professional, Textiles Professional & Engineer, Leather
+                            professional
+                            & engineer, GM, Quality Expert, Dyeing Expert, Trims & Accessories merchandisers &
+                            Marketing
+                            executive over all total information and order collection</i>
                         </p>
                     </div>
                 </div>
-            </div>>
+            </div>
         </div>
     </div>
     <div class="marquee-area">
@@ -198,13 +198,13 @@
                         <h5>Updates: </h5>
                         <p> <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae aut sapiente nobis voluptates eos tempora quas hic laboriosam exercitationem quo. Esse expedita labore libero ducimus magni, in alias quod pariatur!</small></p>
                         <a href="#" class="btn btn-outline-secondary btn-sm float-right">Read More</a><br>
-                        <img src="img/abc-in-01.jpg" alt="">
+                        <a href="#"><img src="img/abc-in-01.jpg" alt=""></a>
                 </div>
                 <div class="col-md-2 fixed fixed-right my-5 ml-md-3 ml-0 py-3 bg-white border-top border-4 border-success">
                     <h5>News & Views: </h5>
                     <p> <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt magnam excepturi velit explicabo, ad voluptatibus commodi ipsum! Cum quibusdam ab explicabo totam laudantium, aut, velit veniam rerum sunt, iste assumenda?</small></p>
                     <a href="#" class="btn btn-outline-secondary btn-sm float-right">Read More</a><br>
-                    <img src="img/abc-in-01.jpg" alt="">
+                    <a href="#"><img src="img/abc-in-01.jpg" alt=""></a>
                 </div>
             </div>
         </div>
